# DeepseekNova

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GITHUB_SETUP_GUIDE.md  GUIDE.md  LICENSE  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  dpronix.toml  reasonix.toml
crates/deepnova-agent/: Cargo.toml  README.md
crates/deepnova-agent/src/: agent.rs  coordinator.rs  fetch_tool.rs  lib.rs  memory.rs  plan_mode.rs  sub_agent.rs  test_utils.rs
crates/deepnova-agent/tests/: runner_contract.rs
crates/deepnova-cli/: Cargo.toml  README.md
crates/deepnova-cli/examples/: quickstart.rs
crates/deepnova-cli/src/: chat.rs  cli.rs  init.rs  main.rs  setup.rs
crates/deepnova-core/: Cargo.toml  README.md
crates/deepnova-core/benches/: events.rs  registry.rs
crates/deepnova-core/src/: error.rs  executor.rs  lib.rs  planner.rs  plugin.rs  runner.rs  types.rs
crates/deepnova-core/src/artifacts/: cards.rs  distill.rs  mod.rs  wiki.rs
crates/deepnova-core/src/identity/: provenance.rs  snapshot.rs
crates/deepnova-core/src/prefix/: controller.rs  epoch.rs  health.rs  mutation.rs  state.rs  transaction.rs
crates/deepnova-desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/deepnova-desktop/capabilities/: default.json
crates/deepnova-desktop/frontend/: index.html  package-lock.json  package.json
crates/deepnova-desktop/frontend/src/: App.tsx  bridge.ts
crates/deepnova-desktop/frontend/src/components/: Composer.tsx  MessageItem.tsx  ModeBar.tsx  SettingsPanel.tsx  SidebarPanel.tsx  Transcript.tsx
crates/deepnova-desktop/src/: commands.rs  lib.rs  main.rs
crates/deepnova-event/: Cargo.toml  README.md
crates/deepnova-event/src/: lib.rs
crates/deepnova-mcp/: Cargo.toml  README.md
crates/deepnova-mcp/src/: adapter.rs  connection.rs  discovery.rs  lib.rs  types.rs
crates/deepnova-orch/: Cargo.toml  README.md
crates/deepnova-orch/src/: lib.rs  memory.rs  planner.rs  swarm.rs  types.rs
crates/deepnova-runtime/: Cargo.toml  README.md
crates/deepnova-runtime/src/: lib.rs
crates/deepnova-security/: Cargo.toml  README.md
crates/deepnova-security/src/: audit.rs  context.rs  lib.rs  limits.rs
crates/deepnova-serve/: Cargo.toml  README.md
crates/deepnova-serve/src/: lib.rs
crates/deepnova-serve/tests/: integration.rs
crates/deepnova-serve/tests/helpers/: http.rs
crates/deepnova-skills/: Cargo.toml  README.md
crates/deepnova-skills/builtin/: adversarial-review.md  dna-spec.md  first-principles.md  frontend-developer.md  loop-engineering.md
crates/deepnova-skills/src/: lib.rs  loader.rs
crates/deepnova-skills/tests/: e2e.rs
crates/deepnova-tools/: Cargo.toml  README.md
crates/deepnova-tools/src/: fs.rs  glob.rs  grep.rs  lib.rs  ls.rs  memory.rs  shell.rs  todo.rs  web_fetch.rs
crates/deepnova-tools/tests/: integration.rs  security_path.rs
crates/deepnova-tui/: Cargo.toml  README.md
crates/deepnova-tui/src/: lib.rs
crates/deepseeknova-agent/: Cargo.toml  README.md
crates/deepseeknova-agent/src/: agent.rs  coordinator.rs  fetch_tool.rs  lib.rs  memory.rs  plan_mode.rs  sub_agent.rs  test_utils.rs
crates/deepseeknova-agent/tests/: runner_contract.rs
crates/deepseeknova-checkpoint/: Cargo.toml  README.md
crates/deepseeknova-checkpoint/src/: lib.rs
crates/deepseeknova-cli/: Cargo.toml  README.md
crates/deepseeknova-cli/examples/: quickstart.rs
crates/deepseeknova-cli/src/: chat.rs  cli.rs  init.rs  main.rs  setup.rs
crates/deepseeknova-context/: Cargo.toml  README.md
crates/deepseeknova-context/src/: history.rs  lib.rs
crates/deepseeknova-context/tests/: memory_integration.rs
crates/deepseeknova-core/: Cargo.toml  README.md
crates/deepseeknova-core/benches/: events.rs  registry.rs
crates/deepseeknova-core/src/: error.rs  graph.rs  lib.rs  planner.rs  plugin.rs  registry.rs
crates/deepseeknova-core/src/artifacts/: cards.rs  distill.rs  mod.rs  wiki.rs
crates/deepseeknova-core/src/identity/: canonical.rs  mod.rs
crates/deepseeknova-core/src/identity/merkle/: mod.rs  tree.rs
crates/deepseeknova-core/src/memory/: lifecycle.rs  mod.rs  policy.rs  profile.rs  recall.rs  skill.rs  store.rs
crates/deepseeknova-core/src/prefix/: controller.rs  mod.rs  recovery.rs
crates/deepseeknova-desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/deepseeknova-desktop/capabilities/: default.json
crates/deepseeknova-desktop/frontend/: package-lock.json  package.json
crates/deepseeknova-desktop/frontend/src/: App.tsx  bridge.ts  styles.css
crates/deepseeknova-desktop/src/: commands.rs  lib.rs  main.rs
crates/deepseeknova-desktop/src/commands/: billing.rs  core.rs  diagnostics.rs  knowledge.rs  memory.rs  misc.rs  mod.rs  subagents.rs
crates/deepseeknova-event/: Cargo.toml  README.md
crates/deepseeknova-event/src/: lib.rs
crates/deepseeknova-mcp/: Cargo.toml  README.md
crates/deepseeknova-mcp/src/: adapter.rs  connection.rs  discovery.rs  lib.rs  types.rs
crates/deepseeknova-orch/: Cargo.toml  README.md
crates/deepseeknova-orch/src/: lib.rs  planner.rs  swarm.rs  types.rs
crates/deepseeknova-permission/: Cargo.toml  README.md
crates/deepseeknova-permission/src/: lib.rs
crates/deepseeknova-provider/: Cargo.toml  README.md
crates/deepseeknova-provider/src/: anthropic.rs  lib.rs  openai.rs  scavenge.rs  types.rs
crates/deepseeknova-provider/src/telemetry/: exporter.rs
crates/deepseeknova-runtime/: Cargo.toml  README.md
crates/deepseeknova-runtime/src/: lib.rs
crates/deepseeknova-sandbox/: Cargo.toml  README.md
crates/deepseeknova-security/: Cargo.toml  README.md
crates/deepseeknova-security/src/: capability.rs  context.rs  path.rs  policy.rs
crates/deepseeknova-serve/: Cargo.toml  README.md
crates/deepseeknova-serve/src/: lib.rs
crates/deepseeknova-serve/tests/: integration.rs
crates/deepseeknova-skills/: Cargo.toml  README.md
crates/deepseeknova-skills/builtin/: coding-copilot.md  dna-spec.md
crates/deepseeknova-skills/src/: lib.rs  loader.rs
crates/deepseeknova-skills/tests/: e2e.rs
(+372 files in other folders)
