[workspace]
members = [
    "crates/reasonix-cli",
    "crates/reasonix-config",
    "crates/reasonix-provider",
    "crates/reasonix-agent",
    "crates/reasonix-tools",
    "crates/reasonix-core",
    "crates/reasonix-mcp",
    "crates/reasonix-event",
    "crates/reasonix-permission",
    "crates/reasonix-context",
    "crates/reasonix-runtime",
    "crates/reasonix-sandbox",
    "crates/reasonix-checkpoint",
    "crates/reasonix-store",
    "crates/reasonix-tui",
    "crates/reasonix-serve",
    "crates/reasonix-skills",
    "crates/reasonix-telemetry",
    "crates/reasonix-desktop",
    "crates/reasonix-orch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/reasonix-rs"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_jcs = "0.1"
indexmap = { version = "2.2", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures-core = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
dirs = "6.0"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
ratatui = "0.29"
crossterm = "0.28"
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
criterion = { version = "0.5", default-features = false }
serde_yaml = "0.9"
walkdir = "2.5"
glob = "0.3"
regex = "1.11"
opentelemetry = "0.27"
opentelemetry-sdk = { package = "opentelemetry_sdk", version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"
tempfile = "3.14"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# cargo-dist configuration (v0.27+)
# Install: cargo install cargo-dist
# Generate CI: cargo dist generate-ci
[workspace.metadata.dist]
# Binary crate(s) to produce
cargo-dist-version = "0.28.0"
rust-toolchain-version = "1.82.0"
ci = "github"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The primary binary
app-name = "reasonix-cli"
# Installer configurations
installer = ["shell", "powershell", "npm"]
# MSI not needed; npm covers the widest audience
preferred-installer = "npm"
# Dispatch releases on version tags
publish-jobs = ["tag"]
# Host the artifacts on GitHub Releases
host = "github"
# Don't build for PRs — only tags and manual dispatch
pr-run-mode = "skip"
