[package]
name = "deepnova-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent implementations: main agent loop, coordinator, and plan-mode runners with tool use and streaming."
readme = "README.md"
documentation = "https://docs.rs/deepnova-agent/0.3.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
deepnova-core = { version = "0.3.0", path = "../deepnova-core" }
deepnova-provider = { version = "0.3.0", path = "../deepnova-provider" }
deepnova-security = { version = "0.3.0", path = "../deepnova-security" }
deepnova-context = { version = "0.3.0", path = "../deepnova-context" }
