[package]
name = "deepnova-orch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent orchestration: GOAP planning, swarm coordination, and agent federation for DeepSeek-V4."
readme = "README.md"
documentation = "https://docs.rs/deepnova-orch/0.3.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
deepnova-core = { version = "0.3.0", path = "../deepnova-core" }
deepnova-agent = { version = "0.3.0", path = "../deepnova-agent" }
deepnova-provider = { version = "0.3.0", path = "../deepnova-provider" }
deepnova-config = { version = "0.3.0", path = "../deepnova-config" }
deepnova-tools = { version = "0.3.0", path = "../deepnova-tools" }
deepnova-event = { version = "0.3.0", path = "../deepnova-event" }
