[package]
name = "deepnova-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Composition root wiring registry, context, event bus, permission, security, and LLM provider into an agent runtime."
readme = "README.md"
documentation = "https://docs.rs/deepnova-runtime/0.3.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
deepnova-core = { version = "0.3.0", path = "../deepnova-core" }
deepnova-config = { version = "0.3.0", path = "../deepnova-config" }
deepnova-provider = { version = "0.3.0", path = "../deepnova-provider" }
deepnova-agent = { version = "0.3.0", path = "../deepnova-agent" }
deepnova-tools = { version = "0.3.0", path = "../deepnova-tools" }
deepnova-permission = { version = "0.3.0", path = "../deepnova-permission" }
deepnova-context = { version = "0.3.0", path = "../deepnova-context" }
deepnova-event = { version = "0.3.0", path = "../deepnova-event" }
deepnova-security = { version = "0.3.0", path = "../deepnova-security" }
