[package]
name = "deepnova-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/deepnova-serve/0.3.0"
description = "HTTP server (axum) for deepnova"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
deepnova-core = { version = "0.3.0", path = "../deepnova-core" }
futures-core = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
