[package]
name = "deepnova-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/deepnova-skills/0.3.0"
description = "Skill system for deepnova"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
deepnova-core = { version = "0.3.0", path = "../deepnova-core" }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
