[package]
name = "deepseeknova-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace indexing and working memory: file trees, project memory (DPRONIX.md), and session state."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-context/0.3.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
deepseeknova-core = { version = "0.3.0", path = "../deepseeknova-core" }

[dev-dependencies]
tempfile = { workspace = true }
