[package]
name = "deepseeknova-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Foundation crate: core types, Runner/Tool traits, registry, and execution graph for the deepseeknova agent framework."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-core/0.4.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_yaml = "0.9"
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "registry"
harness = false

[[bench]]
name = "events"
harness = false
