[package]
name = "deepseeknova-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native desktop app for deepseeknova built with Tauri 2.x: Rust backend + React/TypeScript frontend."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-desktop/0.4.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
dirs = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
deepseeknova-core = { workspace = true }
deepseeknova-agent = { workspace = true }
deepseeknova-config = { workspace = true }
deepseeknova-provider = { workspace = true }
deepseeknova-tools = { workspace = true }
deepseeknova-runtime = { workspace = true }
deepseeknova-store = { workspace = true }
deepseeknova-skills = { workspace = true }
deepseeknova-event = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
