[package]
name = "deepseeknova-event"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent lifecycle event types and pub-sub event bus for tool calls, model responses, and errors."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-event/0.3.0"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
deepseeknova-core = { version = "0.3.0", path = "../deepseeknova-core" }
