[package]
name = "deepseeknova-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol client: connects to external MCP servers (stdio/HTTP) and exposes tools via the Tool trait."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-mcp/0.4.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
deepseeknova-core = { version = "0.4.0", path = "../deepseeknova-core" }
deepseeknova-config = { version = "0.4.0", path = "../deepseeknova-config" }
