[package]
name = "deepseeknova-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-based access control, path confinement, allow-lists, resource limits, and audit logging."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-security/0.4.0"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
deepseeknova-core = { version = "0.4.0", path = "../deepseeknova-core" }

[dev-dependencies]
tempfile = { workspace = true }
