[package]
name = "deepseeknova-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-serve/0.4.0"
description = "HTTP server (axum) for deepseeknova"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
deepseeknova-core = { version = "0.4.0", path = "../deepseeknova-core" }
futures-core = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
